Make drools-pdp work with drools and java versions compatible with current DRL rules files syntax.
Issue-ID: POLICY-4857
Change-Id: If4b385bdef865d07114b8ea0e69abb4589f3a97b
Signed-off-by: adheli.tavares <adheli.tavares@est.tech>